# PaperSage-AgenticRAG-Research-Assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  deepeval_gpt.py  eval_results.json  evaluate.py  goldens.json  login_wall.py  pyproject.toml  requirements-dev.txt  requirements.txt  sessions.json  visualize_graph.py
.streamlit/: config.toml
backend/: btw_handler.py  dashboard.py  guardrails.py  hybrid_retriever.py  models.py  paper_discovery.py  paper_loader.py  planner_agent.py  rag_graph.py  reranker.py  vector_store.py
