[project]
name = "rag-papersage-project"
version = "0.1.0"
description = "Agentic RAG Research Paper Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=3.0.0",
    "beautifulsoup4>=4.14.3",
    "deepeval>=4.0.0",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-google-genai",
    "langchain-openai>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.8.3",
    "lxml>=6.1.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "streamlit>=1.57.0",
    "tavily-python>=0.7.24",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.0.0",
    "tiktoken>=0.9.0",
    "langchain-huggingface>=1.2.2",
    "torchvision>=0.23.0",
]
